@@ -83,7 +83,7 @@ echo
 dnl These are bootstrap requirements! Once built, libtool may work with
 dnl much older releases of autoconf and automake.  See release notes.
 dnl 1.11 is needed for color-tests, 1.11.1 fixes a security issue.
-AM_INIT_AUTOMAKE([1.11.1 gnu subdir-objects dist-xz color-tests parallel-tests])
+AM_INIT_AUTOMAKE([1.11.1 gnu subdir-objects dist-xz])
 AM_SILENT_RULES([yes])
 
 
